--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+
+@layer {
+  li {
+    @apply relative ml-10 hover:text-sage
+  }
+}
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
